--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
 
     <!-- Footer -->
-    <footer><p> Copyright  &copy; 2022 Escola Champagnat: Pinhal</p></footer>
+    <footer><p> Copyright  &copy; 2022 Escola Champagnat-Espírito Santo do Pinhal</p></footer>
 </body>
 <script src="js/script.js"></script>
 </html>
